2.AKS/yaml/springmysql-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springmysql
  namespace: homeeee
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springmysql
  template:
    metadata:
      labels:
        app: springmysql
    spec:
      containers:
        - name: springmysql
          image: acrHomeeee.azurecr.io/springmysql:0.2.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 250m
              # cpu: 100m
              memory: 256Mi
              # memory: 2048Mi
            limits:
              cpu: 500m
              # cpu: 100m
              memory: 256Mi
              # memory: 2048Mi
