2.AKS/yaml/springmysql-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: springmysql 
  namespace: homepage 
spec:
  type: ClusterIP
  ports:
  - port: 8080
  selector:
    app: springmysql
