2.AKS/yaml/springmysql-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springmysql-ing
  namespace: homepage
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /springmysql(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: springmysql
            port:
              number: 8080
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: springmysql
            port:
              number: 8080
